appId: ai.bluprnt.mobile
---
- tapOn:
    text: "Next"
    retryTapIfNoChange: false
    optional: true
- tapOn:
    text: "Next"
    retryTapIfNoChange: false
    optional: true
- tapOn:
    text: "Next"
    retryTapIfNoChange: false
    optional: true
- tapOn:
    text: "Get Started"
    retryTapIfNoChange: false
    optional: true
